--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!DOCTYPE>
+﻿<!DOCTYPE>
 
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Untitled</title>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <title>艦これアーケード設置店舗リスト</title>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script src="./map.js" type="text/javascript"></script>
 </head>
-
-<body>
-
-Hello World!
-
+<body onload="initialize()">
+    <div id="map_canvas" style="width:100%; height:100%"></div>
 </body>
 </html>
