--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>艦これアーケード設置店舗リスト</title>
-    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBudnqL2py1pFVoEh0RXo2a3CtnUPjleD4"></script>
     <script src="./map.js" type="text/javascript"></script>
 </head>
 <body onload="initialize()">
